--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -4,7 +4,7 @@ footer {
     bottom: 0;
     padding: 30px 40px;
     max-width: 100vw;
-    font-size: 25px;
+    font-size: 20px;
 
     background-color: black;
     color: white;
@@ -18,13 +18,14 @@ footer .left {
 }
 
 footer .name {
-    font-size: 1.2em;
+    font-size: 1.3em;
     margin: 0;
 }
 
 footer .location {
-    font-size: 1.1rem;
+    font-size: 0.8em;
     margin-top: 5px;
+    margin: 0;
 }
 
 footer .social-media-icons {
@@ -35,7 +36,7 @@ footer .social-media-icons {
 }
 
 footer .social-media-icons .icon {
-    width: 35px;
+    width: 1.5em;
     height: auto;
 }
 
