--- a/styles/components/navbar.css
+++ b/styles/components/navbar.css
@@ -15,7 +15,8 @@ header {
 }
 
 #navbar {
-    padding: 15px 30px;
+    font-size: 20px;
+    padding: 12px 30px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -42,9 +43,9 @@ header {
 #navbar .tabs {
     display: flex;
     align-items: center;
-    gap: 35px;
+    gap: 1.2em;
     margin-left: auto;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 
 #navbar #mobile-hamburger {
@@ -57,7 +58,7 @@ header {
 
 #navbar h1 {
     font-weight: 700;
-    font-size: 2.6rem;
+    font-size: 2rem;
     margin: 0px;
     text-decoration: none;
     color: white;
@@ -91,6 +92,7 @@ header {
 @media screen and (max-width: 768px) {
     #navbar {
         border-radius: 20px;
+        font-size: 18px;
     }
 
     #navbar #mobile-hamburger {
@@ -102,10 +104,10 @@ header {
     
     #mobile-tabs {
         flex-direction: column;
-        gap: 30px;
+        gap: 1.1em;
         padding: 20px 40px;
         color: white;
-        font-size: 1.7em;
+        font-size: 1.3em;
 
         background-color: rgba(255, 255, 255, 0.3);
         backdrop-filter: blur(10px); 
@@ -122,7 +124,7 @@ header {
     }
 
     #navbar h1 {
-        font-size: 2.2rem;
+        font-size: 1.8em;
     }
 
     #navbar .tabs {
