--- a/styles/domain.css
+++ b/styles/domain.css
@@ -20,11 +20,11 @@ body::-webkit-scrollbar{
 /* Hero Section */
 #hero-section {
     width: 100vw;
-    height: 450px;
+    height: 350px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 #hero-section .title-desc {
@@ -74,17 +74,18 @@ body::-webkit-scrollbar{
 /* Domains Section */
 #recommended-domains {
     margin: 1% 5% 3% 5%;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 #recommended-domains .header {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    margin-bottom: 0.3em;
 }
 
 #recommended-domains h2 {
     font-size: 1.6em;
-    margin-bottom: 0.3em;
 }
 
 #recommended-domains #sorter {
@@ -172,6 +173,7 @@ body::-webkit-scrollbar{
     gap: 5%;
     font-size: 0.9em;
     padding: 0.5em;
+    border: 0;
     border-radius: 10px;
     background-color: rgba(19,49,92, 1);
     color: #FFF;
@@ -183,19 +185,26 @@ body::-webkit-scrollbar{
 @media only screen and (max-width: 800px) {
     /* Hero Section */
     #hero-section {
-        font-size: 20px;
-        height: 400px;
+        font-size: 18px;
+        height: 330px;
     }
 
     /* Domains Section */
     #recommended-domains {
         margin: 20px 5% 20px 5%;
-        font-size: 22px;
+        font-size: 20px;
     }
 
     #recommended-domains .header {
         flex-direction: column;
+        align-items: flex-start;
     }
+
+    #recommended-domains #sorter {
+        margin-top: 5px;
+        font-size: 0.8em;
+    }
+    
 
     #recommended-domains #sorter {
         margin-left: 0;
