--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -27,7 +27,7 @@ body::-webkit-scrollbar{
 
 #hero-section .title {
     margin: 0px 10%;
-    font-size: 75px;
+    font-size: 65px;
 }
 
 #hero-section .desc {
@@ -46,7 +46,7 @@ body::-webkit-scrollbar{
     position: relative;
     margin-top: -300px;
     z-index: 5;
-    font-size: 25px;
+    font-size: 22px;
 }
 
 #price-tiers .tier {
@@ -73,14 +73,14 @@ body::-webkit-scrollbar{
 }
 
 #price-tiers .tier .desc {
-    margin: 12px 0px; 
-    font-size:0.8em;
+    margin: 0.4em 0px; 
+    font-size: 0.8em;
 }
 
 #price-tiers .tier .price {
     margin: 0px;
     margin-top: 10px;
-    font-size: 1.8em;
+    font-size: 1.9em;
 }
 
 #price-tiers .tier .price-per {
@@ -96,7 +96,7 @@ body::-webkit-scrollbar{
 }
 
 #price-tiers .features .feature {
-    font-size: 0.85em;
+    font-size: 0.8em;
     display: inline-flex;
     gap: 10px;
     margin: 0;
@@ -104,17 +104,17 @@ body::-webkit-scrollbar{
 }
 
 #price-tiers .feature-icon {
-    height: 20px;
+    height: 1em;
     width: auto;
 }
 
 #price-tiers .tier .action-btn {
     margin-top: auto;
-    padding: 15px;
+    padding: 0.7em;
     border: 0px;
     font-size: 0.8em;
     font-weight: 700;
-    border-radius: 15px;
+    border-radius: 10px;
     width: 100%;
     display: inline-flex;
     cursor: pointer;
@@ -132,7 +132,7 @@ body::-webkit-scrollbar{
     margin: 5% 4%;
     display: flex;
     flex-direction: column;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 #feature-comparison .subtitle {
