--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -1,10 +1,13 @@
 /* === Styles for the Footer === */
 
 footer {
+    /* position: absolute; */
     bottom: 0;
+    width: 100%;
     padding: 30px 40px;
-    max-width: 100vw;
+    box-sizing: border-box;
     font-size: 20px;
+    margin-top: auto;
 
     background-color: black;
     color: white;
