--- a/styles/domain.css
+++ b/styles/domain.css
@@ -5,8 +5,9 @@ html {
 
 body {
     font-family: 'Roboto', sans-serif;
-    margin: 0px;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 body::-webkit-scrollbar{
