--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -6,6 +6,9 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 body::-webkit-scrollbar{
