--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -31,6 +31,11 @@ body::-webkit-scrollbar{
 #hero-section .title {
     margin: 0px 10%;
     font-size: 65px;
+    font-weight: 600;
+}
+
+#hero-section .bold {
+    font-weight: 800;
 }
 
 #hero-section .desc {
