--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,21 +108,38 @@ body::-webkit-scrollbar{
 
 /* Who We Are Section */
 #whoweare {
-    margin: 3% 5%;
+    margin: 4% 5%;
     display: flex;
     flex-direction: row;
+    text-align: left;
     gap: 4%;
-}
-
-#whoweare .desc {
-    margin-top: 10px;
     font-size: 20px;
 }
 
-#whoweare img {
-    object-fit: fit;
-    width: 30%;
-    height: auto;
+#whoweare .button {
+    display: inline-block;
+    margin-top: 1em;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    font-size: 1.2em;
+    padding: 0.5em 1.2em;
+    border-radius: 50px;
+}
+
+#whoweare .button:hover {
+    background-color: #134074;
+    transition: 0.2s background-color;
+}
+
+#whoweare .desc {
+    font-size: 1.1em;
+    max-width: 50%;
+}
+
+#whoweare .para-break {
+    display: block;
+    margin: 18px;
 }
 
 /* Features Section */
@@ -199,7 +216,7 @@ body::-webkit-scrollbar{
 
 /* Testimonials Section */
 #testimonials {
-    margin: 3% 5vw;
+    margin: 4% 5vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -241,7 +258,7 @@ body::-webkit-scrollbar{
 }
 
 #testimonials .carousel-text {
-    font-size: 1.1em !important;
+    font-size: 1em !important;
 }
 
 #testimonials .carousel-title .name {
@@ -272,7 +289,19 @@ body::-webkit-scrollbar{
 }
 
 #testimonials .testimonial-companies {
-    margin: 5% 25% 0% 25%;
+    margin: 3% 25% 0% 25%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#testimonials .testimonial-companies h3 {
+    font-size: 1.1em;
+    color: #1D2023;
+}
+
+#testimonials .company-list {
+    margin-top: 1%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -307,6 +336,12 @@ body::-webkit-scrollbar{
 /* Contact Us Section */
 #contact-faq #contact {
     flex-basis: 60%;
+}
+
+#contact-faq #contact .subtext {
+    font-weight: 500;
+    font-size: 0.9em !important;
+    margin-top: 0;
 }
 
 #contact-faq form {
@@ -409,7 +444,7 @@ body::-webkit-scrollbar{
     }
 
     /* Who We Are Section */
-    #whoweare .desc {
+    #whoweare {
         font-size: 18px;
     }
 
@@ -501,14 +536,17 @@ body::-webkit-scrollbar{
     /* Who We Are Section */
     #whoweare {
         margin: 6% 5%;
-    }
-    
-    #whoweare .title {
-        font-size: 50px;
+        flex-direction: column;
+        gap: 1.2em;
     }
 
-    #whoweare img {
+    #whoweare .button {
         display: none;
+    }
+
+    #whoweare .desc {
+        font-size: 1.1em;
+        max-width: 100%;
     }
 
     /* Features Section */
